# Study_Flow

./: .gitignore  AIAssistantScreen.qml  AppButton.qml  AppIcon.qml  AppToastHost.qml  CalendarScreen.qml  CurriculumMapScreen.qml  DashboardScreen.qml  DashboardTaskCard.qml  IntelligenceInsightCard.qml  IntelligenceLineChart.qml  IntelligenceMetricCard.qml  IntelligenceTopicCard.qml  LearningIntelligenceScreen.qml  Main.qml  NotificationsScreen.qml  PageHeader.qml  README.md  RevisionScheduleScreen.qml  RoundedDialog.qml  SettingsRow.qml  SettingsScreen.qml  SettingsSection.qml  Sidebar.qml  SidebarItem.qml  SmartStudyScheduleSystem.spec  StatCard.qml  StudyFlow.qmlproject  StudyFlow.qmlproject.qtds  StudyFlow.qrc  TagPill.qml  TaskInboxScreen.qml  Theme.qml  TopicTreeCard.qml  alembic.ini  backend.py  main.py  pyproject.toml  qmldir  requirements.txt  (+4 more)
alembic/: env.py
config/: logging.py  settings.py
data/: learning_report.txt  smart_study.sqlite3-shm  smart_study.sqlite3-wal  smart_study_standalone.sqlite3-shm  smart_study_standalone.sqlite3-wal  studyflow_revisions.ics
db/: __init__.py  repositories.py  session.py
docs/: HLD.md  RELEASE_CHECKLIST.md
llm/: __init__.py  assistant.py
models/: __init__.py  base.py  learning_model.pkl
nlp/: __init__.py  difficulty_predictor.py  training.py
scripts/: __init__.py  build_release.ps1  profile_startup.py
services/: __init__.py  forgetting_curve.py  fsrs.py  reminders.py  scheduler.py  sync.py  topic_management.py
studyflow_backend/: __init__.py  defaults.py  ml_engine.py  models.py  presenters.py  service.py  (+3 more)
(+32 files in other folders)
